feat: implementation of documentation using sprindoc-openapi